--- a/src/app/Components/Employee/create-employee/create-employee.component.html
+++ b/src/app/Components/Employee/create-employee/create-employee.component.html
@@ -53,7 +53,13 @@
                         <select class="form-control titles" formControlName="rol" [class.is-invalid]="rolNoValido"
                             [class.is-valid]="rolValido">
                             <option value="" selected disabled>Rol</option>
-                            <option value="developer">Developer</option>
+                            <option value="Administrador">Administrador</option>
+                            <option value="Contabilidad">Contabilidad</option>
+                            <option value="Ventas">Ventas</option>
+                            <option value="Finanzas">Finanzas</option>
+                            <option value="Porteria">Portería</option>
+                            <option value="Despacho">Despacho</option>
+                            <option value="Recursos Humanos">Recursos Humanos</option>
                         </select>
                     </div>
                     <div autocomplete="off" class="input-group mb-4 px-5">
