--- a/src/app/Components/nav-bar/nav-bar.component.html
+++ b/src/app/Components/nav-bar/nav-bar.component.html
@@ -1,6 +1,6 @@
 <div *ngIf="!(router.url == '/login' || router.url == '/')" class="row">
     <div id="containerNav" class="col-lg-12">
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <nav id="nav"  class="navbar navbar-expand-lg navbar-light bg-light">
             <a class="navbar-brand px-5 py-2" href="#">
                 <img src="../../../assets/Logo.png" width="100" height="ms-auto" class="d-inline-block align-top" alt=""
                     loading="lazy">
