--- a/src/app/Pages/delivery/delivery.component.html
+++ b/src/app/Pages/delivery/delivery.component.html
@@ -1,5 +1,5 @@
 <div class="container-fluid">
-    <div class="row">
+    <div id="leftMenuRow" class="row">
         <div id="leftMenu" class="col-2">
             <div class="nav flex-column nav-pills" id="v-pills-tab" role="tablist" aria-orientation="vertical">
                 <a class="nav-link active" id="v-pills-home-tab" data-toggle="pill" href="#v-pills-home" role="tab"
@@ -10,8 +10,7 @@
                 <a class="nav-link" id="v-pills-profile-tab" data-toggle="pill" href="#v-pills-profile" role="tab"
                     aria-controls="v-pills-profile" aria-selected="false">
                     <img src="../../../assets/Iconos/noun_Eye_1853787.svg" width="30" height="30"
-                        class="d-inline-block pr-2" alt="" loading="lazy"> <span>Ver
-                        empleado</span></a>
+                        class="d-inline-block pr-2" alt="" loading="lazy"> <span>Despacho</span></a>
                 <a class="nav-link" id="v-pills-messages-tab" data-toggle="pill" href="#v-pills-messages" role="tab"
                     aria-controls="v-pills-messages" aria-selected="false"><img
                         src="../../../assets/Iconos/noun_Pencil_2135274.svg" width="30" height="30"
@@ -31,7 +30,8 @@
                 </div>
                 <!--panel-1 ends-->
                 <div class="tab-pane fade" id="v-pills-profile" role="tabpanel" aria-labelledby="v-pills-profile-tab">
-                    ...</div>
+                    <app-photography></app-photography>
+                </div>
                 <div class="tab-pane fade" id="v-pills-messages" role="tabpanel" aria-labelledby="v-pills-messages-tab">
                     ...</div>
                 <div class="tab-pane fade" id="v-pills-settings" role="tabpanel" aria-labelledby="v-pills-settings-tab">
