--- a/src/app/Pages/employees/employees.component.html
+++ b/src/app/Pages/employees/employees.component.html
@@ -1,5 +1,5 @@
 <div class="container-fluid">
-    <div class="row">
+    <div id="leftMenuRow" class="row">
         <div id="leftMenu" class="col-2">
             <div class="nav flex-column nav-pills" id="v-pills-tab" role="tablist" aria-orientation="vertical">
                 <a class="nav-link active" id="v-pills-home-tab" data-toggle="pill" href="#v-pills-home" role="tab"
