--- a/src/app/Pages/home/home.component.html
+++ b/src/app/Pages/home/home.component.html
@@ -15,8 +15,7 @@
           <div class="col-12">
             <div class="card-columns">
               <!--Card 1-->
-
-              <div class="card  bg-secondary">
+              <div class="card  bg-secondary" *ngIf="true">
                 <div class="card-body">
                   <picture>
                     <img id="icons" src="../../../assets/Iconos/partnership-handshake.svg" width="40" height="40"
@@ -27,84 +26,72 @@
                   <ul class="list-group list-group-flush">
                     <li class="list-group-item titles"><a routerLink="/employees" href="#">Crear Empleado</a></li>
                     <li class="list-group-item titles"><a routerLink="/employees" href="#">Ver Empleados
-                        </a></li>
+                      </a></li>
                     <li class="list-group-item titles"><a routerLink="/employees" href="">Modificar</a></li>
 
                   </ul>
 
                 </div>
               </div>
-
               <!--Card 2-->
-              <div class="card  bg-secondary">
+              <div class="card  bg-secondary" *ngIf="true">
                 <div class="card-body">
                   <picture>
                     <img id="icons" src="../../../assets/Iconos/box.svg" width="40" height="40" alt="handShake"
                       class="mr-2">
                   </picture>
                   <h3 id="titles" class="mt-2 titles">Ventas</h3>
-
                   <ul class="list-group list-group-flush">
                     <li class="list-group-item titles"><a routerLink="/client">Crear Pedidos</a> </li>
                     <li class="list-group-item titles"><a routerLink="/delivery">Ver Pedido (Usuario/todos)</a> </li>
                     <li class="list-group-item titles"><a href="">Eliminar</a> </li>
                   </ul>
-
                 </div>
               </div>
               <!--Card 3-->
-              <div class="card  bg-secondary">
+              <div class="card  bg-secondary" *ngIf="true">
                 <div class="card-body">
                   <picture>
                     <img id="icons" src="../../../assets/Iconos/money.svg" width="40" height="40" alt="handShake"
                       class="mr-2">
                   </picture>
                   <h3 id="titles" class="mt-2 titles">Finanzas</h3>
-
                   <ul class="list-group list-group-flush">
-
                     <li class="list-group-item titles"><a href="">Legalizar pago</a> </li>
-
                   </ul>
-
                 </div>
               </div>
               <!--Card 4-->
-              <div class="card  bg-secondary">
+              <div class="card  bg-secondary" *ngIf="true">
                 <div class="card-body">
                   <picture>
                     <img id="icons" src="../../../assets/Iconos/new.svg" width="40" height="40" alt="handShake"
                       class="mr-2">
                   </picture>
                   <h3 id="titles" class="mt-2 titles card-title">Despacho</h3>
-
                   <ul class="list-group list-group-flush">
-
                     <li class="list-group-item titles"><a routerLink="/delivery">Cronograma</a> </li>
                     <li class="list-group-item titles"><a routerLink="photography/:id">Buscar pedido</a> </li>
                   </ul>
-
                 </div>
               </div>
               <!--Card 5-->
-              <div class="card  bg-secondary">
+              <div class="card  bg-secondary" *ngIf="true">
                 <div class="card-body">
                   <picture>
                     <img id="icons" src="../../../assets/Iconos/money.svg" width="40" height="40" alt="handShake"
                       class="mr-2">
                   </picture>
                   <h3 id="titles" class="mt-2 titles">Contabilidad</h3>
-
                   <ul class="list-group list-group-flush">
                     <li class="list-group-item titles"><a routerLink="/accounting">Solicitud cliente</a> </li>
                     <li class="list-group-item titles"><a href="">Crear Clientes</a> </li>
                     <li class="list-group-item titles"><a href="">Modificar Clientes</a> </li>
                   </ul>
-
                 </div>
               </div>
               <!--Card 6-->
-              <div class="card  bg-secondary">
+              <div class="card  bg-secondary" *ngIf="true">
                 <div class="card-body">
                   <picture>
                     <img id="icons" src="../../../assets/Iconos/new.svg" width="40" height="40" alt="handShake"
@@ -113,12 +100,12 @@
                   <h3 id="titles" class="mt-2 titles card-title">Administracion</h3>
                   <ul class="list-group list-group-flush">
                     <li class="list-group-item titles"><a routerLink="/release">Crear Comunicado</a> </li>
-                    <li class="list-group-item titles"><a routerLink="/release" >Modificar Comunicado</a> </li>
+                    <li class="list-group-item titles"><a routerLink="/release">Modificar Comunicado</a> </li>
                   </ul>
                 </div>
               </div>
               <!--Card 7-->
-              <div class="card  bg-secondary">
+              <div class="card  bg-secondary" *ngIf="true">
                 <div class="card-body">
                   <picture>
                     <img id="icons" src="../../../assets/Iconos/new.svg" width="40" height="40" alt="handShake"
@@ -127,7 +114,7 @@
                   <h3 id="titles" class="mt-2 titles card-title">Porteria</h3>
                   <ul class="list-group list-group-flush">
                     <li class="list-group-item titles"><a routerLink="/release">Verificacion de datos</a> </li>
-                    <li class="list-group-item titles"><a routerLink="/release" >Despachar pedido</a> </li>
+                    <li class="list-group-item titles"><a routerLink="/release">Despachar pedido</a> </li>
                   </ul>
                 </div>
               </div>
