--- a/src/app/Components/Client/search-client/search-client.component.html
+++ b/src/app/Components/Client/search-client/search-client.component.html
@@ -10,7 +10,7 @@
                     <div class="form-group row">
                         <label for="staticEmail" class="col-sm-2 col-form-label text">CC:</label>
                         <div class="col-sm-10">
-                            <input type="number" class="form-control text" id="staticEmail" placeholder="XX.XXX.XXX">
+                            <input type="number" class="form-control text" [(ngModel)]="id" name="id" id="staticEmail" placeholder="XX.XXX.XXX">
                         </div>
                     </div>
                     <button type="submit" class="btn btn-block btn-success mb-4">Buscar</button>
