--- a/src/app/Components/Employee/create-employee/create-employee.component.html
+++ b/src/app/Components/Employee/create-employee/create-employee.component.html
@@ -78,7 +78,7 @@
                             (change)="handleFileInput($event.target.files)" [class.is-invalid]="photoFiledNoValido"
                             [class.is-valid]="photoFileValido">
                     </div>
-                    <!--Modulos disponibles-->
+                    <!-- Modulos disponibles
                     <div class="px-5" formArrayName="modulos">
                         <div class="form-check form-check-inline"
                             *ngFor="let control of modulos.controls; let i = index">
@@ -89,7 +89,7 @@
                                 </label>
                             </div>
                         </div>
-                    </div>
+                    </div> -->
                     <div class="">
                         <button class="btn my-5 titles" type="submit">
                             Continuar
