--- a/src/app/Components/Orders/charge-order/charge-order.component.html
+++ b/src/app/Components/Orders/charge-order/charge-order.component.html
@@ -62,7 +62,7 @@
                 <label for="clientName" class="col-sm-2 col-form-label titles">Cliente</label>
                 <div class="col-sm-10">
                   <input type="text" class="form-control text-center" disabled id="clientName"
-                    placeholder="Nombre del cliente">
+                    [(ngModel)]="nombreCliente" name="nombreCliente" placeholder="Nombre del cliente" disabled>
                 </div>
               </div>
             </div>
