--- a/src/app/Components/accounting/request/request.component.html
+++ b/src/app/Components/accounting/request/request.component.html
@@ -9,7 +9,7 @@
         <div id="der">
             <h2 class="mt-4 titles">{{i.nombre}}</h2>
             <p class="text">Telefono: {{i.telefono}}</p>
-            <button routerLink="/employees" class="btn  titles">Crear cliente</button>
+            <button routerLink="/accounting/create" class="btn  titles">Crear cliente</button>
         </div>
     </div>
 </div>
