--- a/src/app/Pages/lodge/lodge.component.html
+++ b/src/app/Pages/lodge/lodge.component.html
@@ -2,18 +2,14 @@
   <div id="leftMenuRow" class="row">
     <div id="leftMenu" class="col-2">
       <div class="nav flex-column nav-pills" id="v-pills-tab" role="tablist" aria-orientation="vertical">
-        <a class="nav-link active" id="v-pills-home-tab" data-toggle="pill" routerLink="/accounting/request" role="tab"
+        <a class="nav-link active" id="v-pills-home-tab" data-toggle="pill" routerLink="/delivery/cronogram" role="tab"
           aria-controls="v-pills-home" aria-selected="true">
           <img src="../../../assets/Iconos/noun_Plus_1886659.svg" width="30" height="30" class="d-inline-block pr-2"
-            alt="" loading="lazy"><span>Solicitud cliente</span></a>
-        <a class="nav-link" id="v-pills-profile-tab" data-toggle="pill" routerLink="/accounting/create" role="tab"
+            alt="" loading="lazy"><span>Verificacion de datos</span></a>
+        <a class="nav-link" id="v-pills-profile-tab" data-toggle="pill" routerLink="/delivery/search" role="tab"
           aria-controls="v-pills-profile" aria-selected="false">
           <img src="../../../assets/Iconos/noun_Eye_1853787.svg" width="30" height="30" class="d-inline-block pr-2"
-            alt="" loading="lazy"> <span>Crear Clientes</span></a>
-        <a class="nav-link" id="v-pills-messages-tab" data-toggle="pill" routerLink="/accounting/create" role="tab"
-          aria-controls="v-pills-messages" aria-selected="false"><img
-            src="../../../assets/Iconos/noun_Pencil_2135274.svg" width="30" height="30" class="d-inline-block pr-2"
-            alt="" loading="lazy"> <span>Modificar Clientes</span></a>
+            alt="" loading="lazy"> <span>Despachar pedido</span></a>
       </div>
     </div>
     <div class="col-10">
