--- a/src/app/Components/Employee/create-employee/create-employee.component.html
+++ b/src/app/Components/Employee/create-employee/create-employee.component.html
@@ -60,17 +60,19 @@
                             <option value="Porteria">Portería</option>
                             <option value="Despacho">Despacho</option>
                             <option value="Recursos Humanos">Recursos Humanos</option>
+                            <option value="Facturacion">Facturacion</option>
+                            Facturacion
                         </select>
                     </div>
                     <div autocomplete="off" class="input-group mb-4 px-5">
                         <input type="mail" minlength="3" name="email" class="form-control titles" placeholder="Correo"
                             formControlName="email" [class.is-invalid]="emailNoValido" [class.is-valid]="emailValido">
                     </div>
-                    <div autocomplete="off" class="input-group mb-4 px-5">
+                    <!-- <div autocomplete="off" class="input-group mb-4 px-5">
                         <input type="password" minlength="3" name="password" class="form-control titles"
                             placeholder="Password" formControlName="password" [class.is-invalid]="passwordNoValido"
                             [class.is-valid]="passwordValido">
-                    </div>
+                    </div> -->
                     <div class="form-group mb-4 px-5">
                         <label for="exampleFormControlFile1" class="titles">Ingresar foto
                             empleado</label>
