--- a/src/app/Components/Orders/charge-order/charge-order.component.html
+++ b/src/app/Components/Orders/charge-order/charge-order.component.html
@@ -77,6 +77,13 @@
               </div>
             </div>
           </div>
+          <div class="row">
+            <div class="col text-center">
+              <button type="button" [ngClass]="{btnDisable: atras === false } " class="btn btn-danger text" (click)="Atras()">Atras</button>
+                <button type="submit" [ngClass]="{btnDisable: confirm === false } " class="btn btn-danger text" (click)="confirmar()">Confirmar</button>
+              <button type="button" [ngClass]="{btnDisable: continuar === false }" class="btn btn-danger text"  (click)="change()" [attr.disabled] = "btnDisable === false ? 'disabled' : null">{{nameBtn}}</button>
+            </div>
+          </div>
         </div>
       </div>
     </div>
