--- a/src/app/Pages/home/home.component.html
+++ b/src/app/Pages/home/home.component.html
@@ -24,10 +24,10 @@
                   <h3 id="titles" class="mt-2 titles ">Recursos Humanos</h3>
 
                   <ul class="list-group list-group-flush">
-                    <li class="list-group-item titles"><a routerLink="/employees" href="#">Crear Empleado</a></li>
-                    <li class="list-group-item titles"><a routerLink="/employees" href="#">Ver Empleados
+                    <li class="list-group-item titles"><a routerLink="/admin/create" href="#">Crear Empleado</a></li>
+                    <li class="list-group-item titles"><a routerLink="/admin/search" href="#">Ver Empleados
                       </a></li>
-                    <li class="list-group-item titles"><a routerLink="/employees" href="">Modificar</a></li>
+                    <li class="list-group-item titles"><a routerLink="/admin/search" href="">Modificar</a></li>
 
                   </ul>
 
@@ -55,7 +55,7 @@
                     <img id="icons" src="../../../assets/Iconos/money.svg" width="40" height="40" alt="handShake"
                       class="mr-2">
                   </picture>
-                  <h3 id="titles" class="mt-2 titles">Finanzas</h3>
+                  <h3 id="titles" class="mt-2 titles">Tesoreria</h3>
                   <ul class="list-group list-group-flush">
                     <li class="list-group-item titles"><a routerLink="/finance/search">Legalizar pago</a> </li>
                   </ul>
@@ -101,6 +101,7 @@
                   <ul class="list-group list-group-flush">
                     <li class="list-group-item titles"><a routerLink="/release/create">Crear Comunicado</a> </li>
                     <li class="list-group-item titles"><a routerLink="/release/create">Modificar Comunicado</a> </li>
+                    <li class="list-group-item titles"><a routerLink="/release/report">Reportes</a> </li>
                   </ul>
                 </div>
               </div>
@@ -115,6 +116,19 @@
                   <ul class="list-group list-group-flush">
                     <li class="list-group-item titles"><a routerLink="/lodge/search">Verificacion de datos</a> </li>
                     <li class="list-group-item titles"><a routerLink="/lodge/search">Despachar pedido</a> </li>
+                  </ul>
+                </div>
+              </div>
+              <!--Card 8-->
+              <div class="card  bg-secondary" *ngIf="rol==='Administrador'|| rol === 'Facturacion'">
+                <div class="card-body">
+                  <picture>
+                    <img id="icons" src="../../../assets/Iconos/new.svg" width="40" height="40" alt="handShake"
+                      class="mr-2">
+                  </picture>
+                  <h3 id="titles" class="mt-2 titles card-title">Facturacion</h3>
+                  <ul class="list-group list-group-flush">
+                    <li class="list-group-item titles"><a routerLink="/billing/search">Facturar pedido</a> </li>
                   </ul>
                 </div>
               </div>
