--- a/src/app/Components/delivery/cronograma/cronograma.component.html
+++ b/src/app/Components/delivery/cronograma/cronograma.component.html
@@ -1,5 +1,5 @@
 <div id="mainContainer" class="container-fluid">
-    <div class="row my-4 text-center">
+    <div class="row my-4">
         <h2 class="titles">Cronograma</h2>
     </div>
     <div class="row text-center">
