--- a/src/app/Components/delivery/photography/photography.component.css
+++ b/src/app/Components/delivery/photography/photography.component.css
@@ -108,7 +108,7 @@
   #cupload{
     width: 100%;
     height: 100px;
-    margin-top: 20%;
+    margin-top: 10%;
   
   }
   
@@ -156,3 +156,7 @@
     width: 15%;
     height: 100%;
   }
+  
+#comentarios{
+  width: 15vw;
+}
