--- a/src/app/Components/delivery/cronograma/cronograma.component.html
+++ b/src/app/Components/delivery/cronograma/cronograma.component.html
@@ -4,7 +4,7 @@
     </div>
     <div class="row text-center">
         <div class="col" style="height: 50vh;">
-            <full-calendar id="calendar" [options]="calendarOptions"></full-calendar>
+            <full-calendar #calendar id="calendar" [options]="calendarOptions"></full-calendar>
         </div>        
     </div>
 </div>
