Cambios photography datos y elementos dinamicos

--- a/src/app/Components/delivery/photography/photography.component.html
+++ b/src/app/Components/delivery/photography/photography.component.html
@@ -48,16 +48,16 @@
             <th class="text align-middle" scope="row">
               <p>{{pedido.codigo_producto}}</p>
             </th>
-            <td class="text">
+            <td class="text align-middle">
               <p>{{pedido.nombre}}</p>
             </td>
-            <td class="text">
+            <td class="text align-middle">
               <p>{{pedido.cantidad}}</p>
             </td>
-            <td class="text">
+            <td class="text align-middle">
               <p>{{pedido.unidad_medicion}}</p>
             </td>
-            <td id="comentarios"  class="text">
+            <td id="comentarios"  class="text align-middle">
               <p>{{pedido.comentarios}}</p>
             </td>
           </tr>
