--- a/src/app/Components/nav-bar/nav-bar.component.html
+++ b/src/app/Components/nav-bar/nav-bar.component.html
@@ -90,16 +90,8 @@
                                 <div >
                                     <ul class="list-group list-group-flush">
                                         <li  *ngFor="let item of notificationData; index as i;" class="list-group-item d-flex justify-content-between align-items-center">
-                                         {{item.message}}
+                                         {{item.body}}
                                           <span class="badge badge-danger badge-pill">14</span>
-                                        </li>
-                                        <li class="list-group-item d-flex justify-content-between align-items-center">
-                                          Dapibus ac facilisis in
-                                          <span class="badge badge-warning badge-pill">2</span>
-                                        </li>
-                                        <li class="list-group-item d-flex justify-content-between align-items-center">
-                                          Morbi leo risus
-                                          <span class="badge badge-primary badge-pill">1</span>
                                         </li>
                                       </ul>
                                 </div>
@@ -108,8 +100,8 @@
                         </ul>
                     </div>
                 </li>
-            
-                
+
+
                 <!--+++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++-->
 
 
