pop up creación y codigo de pedido

--- a/src/app/Components/Orders/create-order/create-order.component.html
+++ b/src/app/Components/Orders/create-order/create-order.component.html
@@ -1,7 +1,7 @@
 <div id="mainContainer" class="container-fluid">
   <form  (ngSubmit)="generateOrder()">
     <div class="row my-4">
-      <h2 class="titles">Montar pedido</h2>
+      <h2 class="titles">Crear pedido</h2>
     </div>
     <div class="row text-center">
       <div class="col">
