vista all employees

--- a/src/app/Components/Employee/all-employees/all-employees.component.html
+++ b/src/app/Components/Employee/all-employees/all-employees.component.html
@@ -1,1 +1,36 @@
-<p>all-employees works!</p>
+<div id="mainContainer" class="container-fluid">
+    <div class="row my-4">
+        <h2 class="titles">Montar pedido</h2>
+    </div>
+    <div class="row text-center">
+        <div class="col">
+            <table id="orderTable" class="table table-hover">
+                <thead>
+                    <tr id="tbHead">
+                        <th class="titles" id="tbHeadLeft">Cedula</th>
+                        <th class="titles separator">Nombre</th>
+                        <th class="titles separator">Rol</th>
+                        <th class="titles separator">Correo</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr class="tRow">
+                        <!--*ngFor="let pedido of pedidos.producto"-->
+                        <th class="text align-middle" scope="row">
+                            test
+                        </th>
+                        <td class="text">
+                            test
+                        </td>
+                        <td class="text">
+                            test
+                        </td>
+                        <td class="text">
+                            test
+                        </td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+    </div>
+</div>
