--- a/src/app/Pages/employees/employees.component.html
+++ b/src/app/Pages/employees/employees.component.html
@@ -7,7 +7,7 @@
           <img src="../../../assets/Iconos/noun_Plus_1886659.svg" width="30" height="30" class="d-inline-block pr-2"
             alt="" loading="lazy"><span>Crear
             Empleado</span></a>
-        <a class="nav-link" id="v-pills-profile-tab" data-toggle="pill" routerLink="/admin/search" role="tab"
+        <a class="nav-link" id="v-pills-profile-tab" data-toggle="pill" routerLink="/admin/employeesList" role="tab"
           aria-controls="v-pills-profile" aria-selected="false">
           <img src="../../../assets/Iconos/noun_Eye_1853787.svg" width="30" height="30" class="d-inline-block pr-2"
             alt="" loading="lazy"> <span>Ver
