--- a/src/app/Components/delivery/photography/photography.component.css
+++ b/src/app/Components/delivery/photography/photography.component.css
@@ -1,162 +1,165 @@
 .form-control {
-    outline: none;
-    border-width: 0 0 2px;
-    border-color: rgb(209, 209, 209);
-    background-color: transparent;
-    border-radius: 0px;
-    color: rgb(160, 160, 160);
-    font-size: 18px;
-    font-weight: bolder;
-  }
-  
-  .input-group option {
-    font-size: 15px;
-  }
-  
-  .form-control:focus {
-    font-size: 15px;
-    box-shadow: none;
-    font-family: "helveticaNowMicro-Regular";
-  }
-  
-  .btn {
-    background: red;
-    color: white;
-    margin-left: 10px;
-    border-radius: 10px;
-    padding: 6px 32px 6px 32px;
-  }
-  
-  .btnDisable {
-    display: none;
-  }
-  
-  #tbHeadLeft {
-    background-color: #e4e4e4;
-    border-radius: 15px 0px 0px 15px;
-    border-top: none;
-    border-bottom: none;
-  }
-  
-  #tbHeadRight {
-    background-color: #e4e4e4;
-    border-radius: 0px 15px 15px 0px;
-    border-top: none;
-    border-bottom: none;
-  }
-  
-  .separator {
-    background: linear-gradient(rgb(199, 199, 199), rgb(199, 199, 199)) no-repeat left/2px 60%
-  }
-  
-  #tbHead th {
-    background-color: #e4e4e4;
-    border-top: none;
-    border-bottom: none;
-  }
-  
-  .tRow th, .tRow td {
-    border-top: none;
-    border-bottom: none;
-    margin: 20px 20px 20px 20px;
-    background-color: #e4e4e4;
-    border: 30px solid white;
-    border-radius: 25px;
-  }
-  
-  #lastElement {
-    border-radius: 100%;
-  }
-  
-  .test {
-    background-color: white;
-    border-radius: 25%;
-  }
-  
-  #total {
-    margin-right: 100px;
-  }
-  
-  #labelSell {
-    border: 2px solid black;
-  }
-  
-  #plusElement {
-    max-width: 3%;
-    position: relative;
-    width: 100%;
-    margin-right: 34px;
-    background-color: #e4e4e4;
-    padding: 6px 0px 6px 0px;
-  }
-  
-  #orderTable {
-    margin-bottom: 0px;
-  }
-  
-  #mainContainer {
-    height: 100vh;
-    overflow: visible;
-  }
-  
-  #statusOrder {
-    z-index: -20;
-    position: absolute;
-    top: 60%;
-    left: 41%;
-  }
-  #cupload{
-    width: 100%;
-    height: 100px;
-    margin-top: 10%;
-  
-  }
-  
-  #upload{
-    text-align: center;
-    width: 30%;
-    height: 100%;
-    float: center;
-    margin-left: 40%;
-  }
-  #ari{
-    width: 100%;
-    height: 50%;
-  }
-  #aba{
-    display: flex;
-    width: 80%;
-    height: 50%;
-    border-radius: 15px;
-    background-color: #e4e4e4;
-    padding-top: 10px;
-  }
-  #upload span{
-    margin-left: 20%;
-    margin-top: -2%;
-    font-size: 24px;
-  
-    
-  }
-  #upload input{
-    margin-left: 5%;
-  }
-  #cont{
-    width: 100%;
-    height: 40px;
-      margin-top: 30px;
-  
-  }
-  #cont button{
-    margin-left: 45%;
-    color: white;
-    border-color: red;
-    border-radius: 15px;
-    background: red;
-    width: 15%;
-    height: 100%;
-  }
-  
-#comentarios{
+  outline: none;
+  border-width: 0 0 2px;
+  border-color: rgb(209, 209, 209);
+  background-color: transparent;
+  border-radius: 0px;
+  color: rgb(160, 160, 160);
+  font-size: 18px;
+  font-weight: bolder;
+}
+
+.input-group option {
+  font-size: 15px;
+}
+
+.form-control:focus {
+  font-size: 15px;
+  box-shadow: none;
+  font-family: "helveticaNowMicro-Regular";
+}
+
+.btn {
+  background: red;
+  color: white;
+  border-radius: 10px;
+  padding: 6px 32px 6px 32px;
+}
+
+.btnDisable {
+  display: none;
+}
+
+#tbHeadLeft {
+  background-color: #e4e4e4;
+  border-radius: 15px 0px 0px 15px;
+  border-top: none;
+  border-bottom: none;
+}
+
+#tbHeadRight {
+  background-color: #e4e4e4;
+  border-radius: 0px 15px 15px 0px;
+  border-top: none;
+  border-bottom: none;
+}
+
+.separator {
+  background: linear-gradient(rgb(199, 199, 199), rgb(199, 199, 199)) no-repeat left/2px 60%
+}
+
+#tbHead th {
+  background-color: #e4e4e4;
+  border-top: none;
+  border-bottom: none;
+}
+
+.tRow th, .tRow td {
+  border-top: none;
+  border-bottom: none;
+  margin: 20px 20px 20px 20px;
+  background-color: #e4e4e4;
+  border: 30px solid white;
+  border-radius: 25px;
+}
+
+#lastElement {
+  border-radius: 100%;
+}
+
+.test {
+  background-color: white;
+  border-radius: 25%;
+}
+
+#total {
+  margin-right: 100px;
+}
+
+#labelSell {
+  border: 2px solid black;
+}
+
+#plusElement {
+  max-width: 3%;
+  position: relative;
+  width: 100%;
+  margin-right: 34px;
+  background-color: #e4e4e4;
+  padding: 6px 0px 6px 0px;
+}
+
+#orderTable {
+  margin-bottom: 0px;
+}
+
+#mainContainer {
+  height: 100vh;
+  overflow: visible;
+}
+
+#statusOrder {
+  z-index: -20;
+  position: absolute;
+  top: 60%;
+  left: 41%;
+}
+
+#cupload {
+  width: 100%;
+  height: 100px;
+  margin-top: 5%;
+}
+
+#upload {
+  text-align: center;
+  width: 30%;
+  height: 100%;
+  float: center;
+  margin-left: 40%;
+}
+
+#ari {
+  width: 100%;
+  height: 50%;
+}
+
+#aba {
+  display: flex;
+  width: 80%;
+  height: 50%;
+  border-radius: 15px;
+  background-color: #e4e4e4;
+  padding-top: 10px;
+}
+
+#upload span {
+  margin-left: 20%;
+  margin-top: -2%;
+  font-size: 24px;
+}
+
+#upload input {
+  margin-left: 5%;
+}
+
+#cont {
+  width: 100%;
+  height: 40px;
+  margin-top: 30px;
+  margin-bottom: 30vh;
+}
+
+#cont button {
+  margin-left: 45%;
+  color: white;
+  border-color: red;
+  border-radius: 15px;
+  background: red;
+  width: 15%;
+  height: 100%;
+}
+
+#comentarios {
   width: 15vw;
 }
