--- a/src/app/Pages/home/home.component.html
+++ b/src/app/Pages/home/home.component.html
@@ -24,12 +24,9 @@
                   <h3 id="titles" class="mt-2 titles ">Asistente Comercial</h3>
 
                   <ul class="list-group list-group-flush">
-                    <li class="list-group-item titles"><a routerLink="/admin/create" >Crear Empleado</a></li>
-                    <li class="list-group-item titles"><a routerLink="/admin/search">Ver Empleados</a></li>
-                    <li class="list-group-item titles"><a routerLink="/admin/search" >Modificar</a></li>
-                    <li class="list-group-item titles"><a routerLink="/delivery/cronogram">Cronograma</a> </li>
-                    <li class="list-group-item titles"><a routerLink="/release/report">Reportes</a> </li>
-                    <li class="list-group-item titles"><a routerLink="/accounting/create">Crear Clientes</a> </li>
+                    <li class="list-group-item titles"><a routerLink="/admin/cronogram">Cronograma</a> </li>
+                    <li class="list-group-item titles"><a routerLink="/admin/report">Reportes</a> </li>
+                    <li class="list-group-item titles"><a routerLink="/admin/create">Crear Clientes</a> </li>
                   </ul>
 
                 </div>
